--- a/Valuts.Azure.Console1/Valuts.Azure.Console1.csproj
+++ b/Valuts.Azure.Console1/Valuts.Azure.Console1.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Vault.Azure.Utils\Vault.Azure.Utils.csproj" />
+  </ItemGroup>
+
 </Project>
