--- a/Masstransits.GettingStarted/Masstransits.Setup.csproj
+++ b/Masstransits.GettingStarted/Masstransits.Setup.csproj
@@ -9,6 +9,6 @@
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.7" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="MassTransit" Version="[8.*,9.0)" />
-    <PackageReference Include="Testcontainers.RabbitMq" Version="4.3.0" />
+    <PackageReference Include="Testcontainers" Version="4.3.0" />
   </ItemGroup>
 </Project>
