--- a/Masstransits.Harness.Test/Masstransits.Harness.Test.csproj
+++ b/Masstransits.Harness.Test/Masstransits.Harness.Test.csproj
@@ -11,12 +11,13 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
-    <PackageReference Include="MassTransit" Version="8.3.7" />
-    <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="Testcontainers.RabbitMq" Version="4.3.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+	  <PackageReference Include="MassTransit.RabbitMQ" Version="8.4.0" />
+	 
+	  <PackageReference Include="MassTransit" Version="[8.*,9.0)" />
   </ItemGroup>
 
   <ItemGroup>
