--- a/Masstransits.GettingStarted/Masstransits.Setup.csproj
+++ b/Masstransits.GettingStarted/Masstransits.Setup.csproj
@@ -7,8 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.4.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-    <PackageReference Include="MassTransit" Version="[8.*,9.0)" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
+    <PackageReference Include="MassTransit" Version="8.4.0" />
     <PackageReference Include="Testcontainers" Version="4.3.0" />
   </ItemGroup>
 </Project>
