--- a/EventStore.Tests.Integration/EventStore.Tests.Integration.csproj
+++ b/EventStore.Tests.Integration/EventStore.Tests.Integration.csproj
@@ -10,14 +10,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoFixture" Version="4.18.1" />
-    <PackageReference Include="coverlet.collector" Version="6.0.0" />
-    <PackageReference Include="FluentAssertions" Version="8.2.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageReference Include="xunit" Version="2.5.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
-    <PackageReference Include="EventStore.Client.Grpc.Streams" Version="23.3.8" />
-	<PackageReference Include="Testcontainers.EventStoreDb" Version="4.3.0" />
+    <PackageReference Include="AutoFixture"  />
+    <PackageReference Include="coverlet.collector" />
+    <PackageReference Include="FluentAssertions" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk"  />
+    <PackageReference Include="xunit"  />
+    <PackageReference Include="xunit.runner.visualstudio" />
+    <PackageReference Include="EventStore.Client.Grpc.Streams" />
+	<PackageReference Include="Testcontainers.EventStoreDb"  />
   </ItemGroup>
 
   <ItemGroup>
