--- a/Language.LinqPlayground/Language.LinqPlayground.csproj
+++ b/Language.LinqPlayground/Language.LinqPlayground.csproj
@@ -8,10 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CsvHelper" Version="33.0.1" />
-    <PackageReference Include="Dapper" Version="2.1.35" />
-    <PackageReference Include="Npgsql" Version="8.0.7" />
-    <PackageReference Include="Testcontainers.PostgreSql" Version="4.3.0" />
+    <PackageReference Include="CsvHelper" />
+    <PackageReference Include="Dapper" />
+    <PackageReference Include="Npgsql"  />
+    <PackageReference Include="Testcontainers.PostgreSql"  />
   </ItemGroup>
 
   <ItemGroup>
