--- a/Masstransits.Consumer/Masstransits.Consumer.csproj
+++ b/Masstransits.Consumer/Masstransits.Consumer.csproj
@@ -8,9 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="MassTransit" Version="8.4.0" />
-    <PackageReference Include="MassTransit.RabbitMQ" Version="8.4.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
+	<PackageReference Include="MassTransit" />
+    <PackageReference Include="MassTransit.RabbitMQ" />
+    <PackageReference Include="Microsoft.Extensions.Hosting"  />
   </ItemGroup>
 
   <ItemGroup>
