--- a/Masstransits.GettingStarted/Masstransits.Setup.csproj
+++ b/Masstransits.GettingStarted/Masstransits.Setup.csproj
@@ -6,9 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MassTransit.RabbitMQ" Version="8.4.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
-    <PackageReference Include="MassTransit" Version="8.4.0" />
-    <PackageReference Include="Testcontainers" Version="4.3.0" />
+    <PackageReference Include="MassTransit.RabbitMQ"  />
+    <PackageReference Include="Microsoft.Extensions.Hosting"  />
+    <PackageReference Include="MassTransit"  />
+    <PackageReference Include="Testcontainers" />
   </ItemGroup>
 </Project>
