--- a/RedisPlay.Console1/RedisPlay.Console1.csproj
+++ b/RedisPlay.Console1/RedisPlay.Console1.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="StackExchange.Redis" Version="2.8.14" />
+    <PackageReference Include="StackExchange.Redis"  />
   </ItemGroup>
 
   <ItemGroup>
