--- a/Vault.Azure.Utils/Vault.Azure.Utils.csproj
+++ b/Vault.Azure.Utils/Vault.Azure.Utils.csproj
@@ -6,8 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Azure.Identity" Version="1.12.0" />
-		<PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.6.0" />
+		<PackageReference Include="Azure.Identity" />
+		<PackageReference Include="Azure.Security.KeyVault.Secrets"  />
 	</ItemGroup>
 
 </Project>
