--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,32 +1,34 @@
 <Project>
-	<PropertyGroup>
-		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-	</PropertyGroup>
-	<ItemGroup>
-		<PackageVersion Include="Autofac" Version="7.0.1" />
-		<PackageVersion Include="Azure.Identity" Version="1.12.0" />
-		<PackageVersion Include="Azure.Security.KeyVault.Secrets" Version="4.6.0" />
-		<PackageVersion Include="StackExchange.Redis" Version="2.8.14" />
-		<PackageVersion Include="MassTransit.RabbitMQ" Version="8.4.0" />
-		<PackageVersion Include="MassTransit" Version="8.4.0" />
-		<PackageVersion Include="EventStore.Client.Grpc.Streams" Version="23.3.8" />
-		<PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
-		<PackageVersion Include="CsvHelper" Version="33.0.1" />
-		<PackageVersion Include="Dapper" Version="2.1.35" />
-		<PackageVersion Include="Npgsql" Version="8.0.7" />
-		<PackageVersion Include="Azure.Storage.Blobs" Version="12.24.0" />
-	</ItemGroup>
-	<!-- Test Packages -->
-	<ItemGroup>
-		<PackageVersion Include="coverlet.collector" Version="6.0.0" />
-		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-		<PackageVersion Include="Testcontainers" Version="4.3.0" />
-		<PackageVersion Include="Testcontainers.RabbitMq" Version="4.3.0" />
-		<PackageVersion Include="Testcontainers.PostgreSql" Version="4.3.0" />
-		<PackageVersion Include="Testcontainers.EventStoreDb" Version="4.3.0" />
-		<PackageVersion Include="xunit" Version="2.5.3" />
-		<PackageVersion Include="xunit.runner.visualstudio" Version="2.5.3" />
-		<PackageVersion Include="AutoFixture" Version="4.18.1" />
-		<PackageVersion Include="FluentAssertions" Version="8.2.0" />
-	</ItemGroup>
+  <PropertyGroup>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageVersion Include="Autofac" Version="7.0.1" />
+    <PackageVersion Include="Azure.Identity" Version="1.12.0" />
+    <PackageVersion Include="Azure.Security.KeyVault.Secrets" Version="4.6.0" />
+    <PackageVersion Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageVersion Include="Serilog.Sinks.File" Version="6.0.0" />
+    <PackageVersion Include="StackExchange.Redis" Version="2.8.14" />
+    <PackageVersion Include="MassTransit.RabbitMQ" Version="8.4.0" />
+    <PackageVersion Include="MassTransit" Version="8.4.0" />
+    <PackageVersion Include="EventStore.Client.Grpc.Streams" Version="23.3.8" />
+    <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
+    <PackageVersion Include="CsvHelper" Version="33.0.1" />
+    <PackageVersion Include="Dapper" Version="2.1.35" />
+    <PackageVersion Include="Npgsql" Version="8.0.7" />
+    <PackageVersion Include="Azure.Storage.Blobs" Version="12.24.0" />
+  </ItemGroup>
+  <!-- Test Packages -->
+  <ItemGroup>
+    <PackageVersion Include="coverlet.collector" Version="6.0.0" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageVersion Include="Testcontainers" Version="4.3.0" />
+    <PackageVersion Include="Testcontainers.RabbitMq" Version="4.3.0" />
+    <PackageVersion Include="Testcontainers.PostgreSql" Version="4.3.0" />
+    <PackageVersion Include="Testcontainers.EventStoreDb" Version="4.3.0" />
+    <PackageVersion Include="xunit" Version="2.5.3" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.3" />
+    <PackageVersion Include="AutoFixture" Version="4.18.1" />
+    <PackageVersion Include="FluentAssertions" Version="8.2.0" />
+  </ItemGroup>
 </Project>
