--- a/Email.FluentEmails.Console/docker-compose.yaml
+++ b/Email.FluentEmails.Console/docker-compose.yaml
@@ -3,7 +3,7 @@
 services:
   smtp4dev:
     image: rnwood/smtp4dev:v3
-    restart: always
+    restart: on-failure
     ports:
       # Change the number before : to the port the web interface should be accessible on
       - '5000:80'
