feat: Link console tests with Smtp4Server TestContainers

--- a/Email.FluentEmails.Console/Email.FluentEmails.ConsoleTests.csproj
+++ b/Email.FluentEmails.Console/Email.FluentEmails.ConsoleTests.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Common.Fixtures.Email\Common.Fixtures.Email.csproj" />
+  </ItemGroup>
+
 </Project>
