--- a/Email.MimeKitLib.Test/Email.MimeKitLib.Test.csproj
+++ b/Email.MimeKitLib.Test/Email.MimeKitLib.Test.csproj
@@ -11,12 +11,18 @@
 
 	<ItemGroup>
 		<PackageReference Include="Bogus" />
-		<PackageReference Include="coverlet.collector" />
+		<PackageReference Include="coverlet.collector">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" />
 		<PackageReference Include="MimeKit" />
 		<PackageReference Include="MailKit" />
 		<PackageReference Include="xunit" />
-		<PackageReference Include="xunit.runner.visualstudio" />
+		<PackageReference Include="xunit.runner.visualstudio">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="FluentAssertions" />
 	</ItemGroup>
 
