--- a/EventStore.Tests.Integration/EventStore.Tests.Integration.csproj
+++ b/EventStore.Tests.Integration/EventStore.Tests.Integration.csproj
@@ -10,14 +10,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoFixture"  />
-    <PackageReference Include="coverlet.collector" />
+    <PackageReference Include="AutoFixture" />
+    <PackageReference Include="coverlet.collector">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="FluentAssertions" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk"  />
-    <PackageReference Include="xunit"  />
-    <PackageReference Include="xunit.runner.visualstudio" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="xunit" />
+    <PackageReference Include="xunit.runner.visualstudio">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="EventStore.Client.Grpc.Streams" />
-	<PackageReference Include="Testcontainers.EventStoreDb"  />
+	<PackageReference Include="Testcontainers.EventStoreDb" />
   </ItemGroup>
 
   <ItemGroup>
