--- a/Masstransits.Harness.Test/Masstransits.Harness.Test.csproj
+++ b/Masstransits.Harness.Test/Masstransits.Harness.Test.csproj
@@ -10,13 +10,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk"  />
-    <PackageReference Include="Testcontainers.RabbitMq"  />
-    <PackageReference Include="xunit"  />
-    <PackageReference Include="xunit.runner.visualstudio"  />
-	<PackageReference Include="MassTransit.RabbitMQ"  />	 
-	<PackageReference Include="MassTransit"  />
+    <PackageReference Include="coverlet.collector">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="Testcontainers.RabbitMq" />
+    <PackageReference Include="xunit" />
+    <PackageReference Include="xunit.runner.visualstudio">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+	<PackageReference Include="MassTransit.RabbitMQ" />	 
+	<PackageReference Include="MassTransit" />
   </ItemGroup>
 
   <ItemGroup>
