--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,6 +6,13 @@
     <PackageVersion Include="Bogus" Version="35.6.3" />
     <PackageVersion Include="FluentEmail.Core" Version="3.0.2" />
     <PackageVersion Include="FluentEmail.Smtp" Version="3.0.2" />
+    <!--gRPC Starts-->
+    <PackageVersion Include="Google.Protobuf" Version="3.33.1" />
+    <PackageVersion Include="Grpc.AspNetCore.Server.Reflection" Version="2.71.0" />
+    <PackageVersion Include="Grpc.Net.Client" Version="2.71.0" />
+    <PackageVersion Include="Grpc.Reflection" Version="2.71.0" />
+    <PackageVersion Include="Grpc.Tools" Version="2.76.0" />
+    <!--gPRC Ends-->
     <PackageVersion Include="MailKit" Version="4.12.1" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
     <PackageVersion Include="MimeKit" Version="4.12.0" />
@@ -32,7 +39,7 @@
     <PackageVersion Include="AutoFixture" Version="4.18.1" />
     <PackageVersion Include="FluentAssertions" Version="8.2.0" />
     <PackageVersion Include="MassTransit.TestFramework" Version="8.4.0" />
-    <PackageVersion Include="Grpc.AspNetCore" Version="2.57.0" />
+    <PackageVersion Include="Grpc.AspNetCore" Version="2.71.0" />
   </ItemGroup>
   <PropertyGroup>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
