--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,12 +16,17 @@
     <PackageVersion Include="Grpc.Tools" Version="2.76.0" />
     <!--gPRC Ends-->
     <PackageVersion Include="MailKit" Version="4.14.1" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="10.0.0" />
     <PackageVersion Include="MimeKit" Version="4.14.0" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
+    <PackageVersion Include="RabbitMQ.Client" Version="7.2.0" />
     <!--Serilog Starts-->
     <PackageVersion Include="Serilog" Version="4.3.0" />
     <PackageVersion Include="Serilog.Sinks.Console" Version="6.1.1" />
     <PackageVersion Include="Serilog.Sinks.File" Version="7.0.0" />
+    <PackageVersion Include="Spectre.Console" Version="0.54.0" />
     <!--Serilog Ends-->
     <PackageVersion Include="StackExchange.Redis" Version="2.9.32" />
     <!--Masstransit Starts-->
