--- a/RabbitMqNative/RabbitMqDirect/appsettings.json
+++ b/RabbitMqNative/RabbitMqDirect/appsettings.json
@@ -1,12 +1,18 @@
 {
   "RabbitMqDirect": {
+    "AvailableConnections": [ "sandbox", "production", "manual" ],
+    "Vault": {
+      "Sandbox": "https://pvsandbox-keyvault.vault.azure.net",
+      "Production": "https://pvprod-keyvault.vault.azure.net"
+    },
+    "LastUsedConnection": "sandbox",
     "ConnectionSettings": {
       "HostName": "localhost",
       "UserName": "guest",
       "Password": "guest",
       "Port": 5672,
-      "VirtualHost": "/"
+      "VirtualHost": "ParcelVision.Retail"
     },
-    "LastUsedQueues": [ "queue1", "queue2", "queue3" ]
+    "LastUsedQueues": []
   }
 }
